Removed Tone for now

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -20,7 +20,6 @@
     "electron": "^1.8.1"
   },
   "dependencies": {
-    "electron-packager": "^8.7.2",
-    "tone": "^0.12.80"
+    "electron-packager": "^8.7.2"
   }
 }
