--- a/desktop/package.json
+++ b/desktop/package.json
@@ -17,9 +17,7 @@
     "push": "npm run build ; npm run push_osx ; npm run push_linux ; npm run push_win ; npm run clean ; npm run push_status"
   },
   "devDependencies": {
-    "electron": "^1.8.8"
-  },
-  "dependencies": {
+    "electron": "^3.0.4",
     "electron-packager": "^12.1.1"
   }
 }
