--- a/desktop/package.json
+++ b/desktop/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "electron .",
     "time": "node time.js",
+    "docs": "node ../docs.js",
     "clean": "rm -r ~/Desktop/Pico-darwin-x64/ ; rm -r ~/Desktop/Pico-linux-x64/ ; rm -r ~/Desktop/Pico-win32-x64/ ; echo 'cleaned build location'",
     "build_osx": "electron-packager . Pico --platform=darwin --arch=x64 --out ~/Desktop/ --overwrite --icon=icon.icns ; echo 'Built for OSX'",
     "build_linux": "electron-packager . Pico --platform=linux  --arch=x64 --out ~/Desktop/ --overwrite --icon=icon.ico ; echo 'Built for LINUX'",
