Removed console logs and renamed configs

--- a/desktop/core/bridge/osc.conf
+++ b/desktop/core/bridge/osc.conf
@@ -7,8 +7,8 @@ module.exports = {
   port: 12000,
 
   defs: {
-    myKey: {
-      path: '/Hello/Orca'
+    foo: {
+      path: '/Foo/Bar'
     },
     A: {
       path: '/ctrlA',
