update osc example

--- a/desktop/core/bridge/osc.conf
+++ b/desktop/core/bridge/osc.conf
@@ -19,14 +19,12 @@ module.exports = {
       pattern: 'f'
     },
     C: {
-      port: 3333,
       path: '/ctrlC',
       pattern: 's'
     },
     D: {
-      port: 3333,
       path: '/ctrlD',
-      pattern: 'ifs'
+      pattern: 'isf'
     }
   }
 }
