initial work on using tonejs as a default output if no other midi outputs available

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -24,6 +24,7 @@
     "electron-rebuild": "^1.8.2"
   },
   "dependencies": {
-    "node-osc": "^3.0.0"
+    "node-osc": "^3.0.0",
+    "tone": "^13.4.9"
   }
 }
