--- a/desktop/package.json
+++ b/desktop/package.json
@@ -19,11 +19,10 @@
     "push": "npm run build ; npm run push_osx ; npm run push_linux ; npm run push_win ; npm run clean ; npm run push_status"
   },
   "devDependencies": {
-    "electron": "^3.1.6",
-    "electron-packager": "^13.1.1",
-    "electron-rebuild": "^1.8.4"
+    "electron": "^3.1.8",
+    "electron-packager": "^13.1.1"
   },
   "dependencies": {
-    "node-osc": "^3.0.0"
+    "node-osc": "^3.0.1"
   }
 }
