specified minimum node.js version requirements for desktop client

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,9 @@
 {
   "name": "Orca",
   "version": "0.1.0",
+  "engines": {
+    "node": ">= 10"
+  },
   "main": "main.js",
   "scripts": {
     "start": "electron . --disable-gpu",
