--- a/desktop/package.json
+++ b/desktop/package.json
@@ -27,7 +27,7 @@
     "electron-packager": "^14.2.1"
   },
   "dependencies": {
-    "fuse.js": "^6.4.1",
+    "fuzzy": "^0.1.3",
     "node-osc": "^4.1.8"
   },
   "standard": {
